--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakib Al Hasan</title>
+    <title>Abdullah Al Mahdi
+    </title>
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- Font Awesome CDN -->
@@ -23,7 +24,7 @@
         /* Styles for header when scrolled */
         /* Styles for header when scrolled */
         #header.scrolled {
-            background-color: #00a597;
+            background-color: #923030d8;
             /* Change this to your preferred minimal color */
         }
 
@@ -45,7 +46,7 @@
         }
 
         .bg-gradient-to-b {
-            background: linear-gradient(to bottom, rgb(65, 230, 175), rgb(0, 177, 168));
+            background: linear-gradient(to bottom, rgb(136, 207, 255), rgb(141, 255, 166));
 
         }
 
@@ -114,7 +115,7 @@
     <!-- Header Section -->
     <header id="header" class="fixed top-0 left-0 w-full z-50 bg-transparent transition-all duration-300">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold text-white">Sakib</h1>
+            <h1 class="text-xl font-bold text-white">Mahdi</h1>
             <!-- Mobile Menu Toggle Icon -->
             <div id="menu-toggle" class="block md:hidden">
                 <button id="open-icon" class="text-white focus:outline-none">
@@ -138,8 +139,6 @@
                     <li><a href="#home" class="text-white hover:text-gray-300">Home</a></li>
                     <li><a href="#about" class="text-white hover:text-gray-300">About</a></li>
 
-                    <li><a href="#skills" class="text-white hover:text-gray-300">Skills</a></li>
-                    <li><a href="#services" class="text-white hover:text-gray-300">Services</a></li>
 
                 </ul>
             </nav>
@@ -147,24 +146,24 @@
     </header>
 
     <!-- hero section  -->
-    <section id="home" class="py-32 px-4 bg-gradient-to-r from-green-600 to-blue-500">
+    <section id="home" class="py-32 px-4 bg-gradient-to-r from-blue-700 to-red-500">
         <div class="hero-box container mx-auto flex items-center justify-between h-900">
-            <div class="w-1/2 infos">
-                <h2 class="text-5xl font-bold text-white mb-4">Sakib Al Hasan</h2>
-                <h3 class="text-2xl text-white mb-4">Digital Marketer</h3>
-                <p class="text-white">I'm Sakib Al Hasan. I have skills on Social media marketing (mostly Facebook
-                    marketing). I have skills in PowerPoint and I'm good at Sales.</p>
+            <div class="w-3/4 infos">
+                <h2 class="text-5xl font-bold text-white mb-4">Abdullah Al Mahdi</h2>
+                <h3 class="text-2xl text-white mb-4">Business-man</h3>
+                <p class="text-white">I'm Abdullah Al Mahdi, studying at North South University and Tamirul Millat Kamil
+                    Madrasah while managing my own busines.</p>
             </div>
             <div class="dp w-1/2 flex flex-col items-center justify-center">
                 <!-- Image -->
-                <img src="https://i.ibb.co/gZgPKQ2/IMG-20240416-WA0001-3-Shakib-Al-Hasan.jpg" alt="Sakib image"
-                    class="rounded-full h-48 w-48 object-cover object-center mb-4">
+                <img src="https://i.ibb.co/qgmVq2v/434977709-1122608932381010-3456547892574939696-n.jpg"
+                    alt="Sakib image" class="rounded-full h-48 w-48 object-cover object-center mb-4">
 
                 <!-- Social Media Icons -->
                 <div id="social-media-icons" class="flex items-center">
-                    <a href="https://www.facebook.com/shakibmcmissile?mibextid=ZbWKwL"
+                    <a href="https://www.facebook.com/profile.php?id=100038957418885"
                         class="text-white mr-4 hover:text-gray-300"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/shakibmcmissile?igsh=dDV6OGR1aHg4czNu"
+                    <a href="https://www.instagram.com/abdullahalmehedi33"
                         class="text-white mr-4 hover:text-gray-300"><i class="fab fa-instagram"></i></a>
                     <!-- <a href="#" class="text-white hover:text-gray-300"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
@@ -176,120 +175,16 @@
         <h2 class="text-3xl font-bold text-center mb-8">About Me</h2>
         <div class="flex flex-col md:flex-row md:space-x-10">
             <img class="w-full md:w-1/2 rounded-lg object-cover mb-4 md:mb-0"
-                src="https://i.ibb.co/N9pZr6y/PXL-20240411-032107785-2-Shakib-Al-Hasan.jpg"
-                alt="Your Name - Profile Picture">
+                src="https://i.ibb.co/645GTgw/409207359-1055123442462893-370818020232202213-n.jpg"
+                alt=" Profile Picture">
             <div class="flex-grow prose text-gray-700">
-                <p>I'm Sakib Al Hasan, specializing in social media marketing, particularly Facebook. Skilled in
-                    crafting engaging content and targeted ad campaigns, I drive brand visibility and lead generation.
-                    Proficient in PowerPoint, I create impactful presentations for diverse purposes. Additionally, I
-                    excel in sales, adept at identifying opportunities and closing deals. With a strategic approach and
-                    dedication to results, I'm poised to contribute to any team or organization aiming to enhance their
-                    online presence and drive revenue.</p>
-                <a href="#contact"
+                <p>I'm Abdullah Al Mahdi, a student at North South University and Tamirul Millat Kamil Madrasah. Gazipur
+                    is my hometown. Alongside studies, I run my own business. Born on 6/3/2002, I'm driven by learning,
+                    faith, and entrepreneurship, striving to make every day count towards a brighter future.</p>
+                <a href="https://www.facebook.com/profile.php?id=100038957418885"
                     class="inline-flex items-center px-4 py-2 mt-4 text-white bg-blue-500 rounded-md hover:bg-blue-700 focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Let's
-                    Connect!</a>
+                    Connect with me</a>
             </div>
-        </div>
-    </section>
-    <!-- Skill Section -->
-    <section id="skills" class="py-20 px-4 bg-gradient-to-b from-blue-400 via-purple-500 to-pink-500">
-        <div class="container mx-auto">
-            <!-- Title -->
-            <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Skills</h2>
-
-            <!-- Skill Boxes -->
-            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <!-- Skill Box - Social Media Marketing -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-globe-americas text-4xl text-blue-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">Social Media Marketing</span>
-                </div>
-
-                <!-- Skill Box - PowerPoint -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-file-powerpoint text-4xl text-red-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">PowerPoint</span>
-                </div>
-
-                <!-- Skill Box - Sales -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-handshake text-4xl text-green-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">Sales</span>
-                </div>
-
-                <!-- Add more skills here -->
-                <!-- Skill Box - Data Analysis -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-chart-bar text-4xl text-purple-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">Data Analysis</span>
-                </div>
-
-                <!-- Skill Box - Content Creation -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-pen text-4xl text-orange-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">Content Creation</span>
-                </div>
-
-                <!-- Skill Box - Customer Relationship Management -->
-                <div class="bg-white p-4 rounded-lg shadow-md flex flex-col items-center justify-center">
-                    <i class="fas fa-users text-4xl text-blue-500 mb-2"></i>
-                    <span class="text-gray-800 font-semibold">CRM</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Services Section -->
-    <section id="services" class="py-20 px-4 bg-gray-100">
-        <div class="container mx-auto">
-            <!-- Title -->
-            <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Services</h2>
-
-            <!-- Service Cards -->
-            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Service 1 - Social Media Marketing -->
-                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
-                    <i class="fas fa-globe-americas text-3xl text-blue-500 mr-4 mt-1"></i>
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Social Media Marketing</h3>
-                        <p class="text-gray-600">Strategically enhance brand presence and engagement across social
-                            platforms.</p>
-                    </div>
-                </li>
-
-                <!-- Service 2 - Content Creation and Curation -->
-                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
-                    <i class="fas fa-pen text-3xl text-blue-500 mr-4 mt-1"></i>
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Content Creation and Curation</h3>
-                        <p class="text-gray-600">Craft compelling content tailored to target audiences for maximum
-                            impact.</p>
-                    </div>
-                </li>
-
-                <!-- Service 3 - Digital Advertising Campaigns -->
-                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
-                    <i class="fas fa-bullhorn text-3xl text-blue-500 mr-4 mt-1"></i>
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Digital Advertising Campaigns</h3>
-                        <p class="text-gray-600">Create and manage targeted ad campaigns to drive conversions and ROI.
-                        </p>
-                    </div>
-                </li>
-
-                <!-- Service 6 - Search Engine Optimization (SEO) -->
-                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
-                    <i class="fas fa-search text-3xl text-blue-500 mr-4 mt-1"></i>
-                    <div>
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Search Engine Optimization (SEO)</h3>
-                        <p class="text-gray-600">Optimize website content and structure to improve search engine
-                            rankings.</p>
-                    </div>
-                </li>
-
-                <!-- Add more services here -->
-            </ul>
         </div>
     </section>
 
