--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         <div class="hero-box container mx-auto flex items-center justify-between h-900">
             <div class="w-3/4 infos">
                 <h2 class="text-5xl font-bold text-white mb-4">Abdullah Al Mahdi</h2>
-                <h3 class="text-2xl text-white mb-4">Entrepreneurship, Driving</h3>
+                <h3 class="text-2xl text-white mb-4">Entrepreneur, Business-man</h3>
                 <p class="text-white">I'm Abdullah Al Mahdi is a student and entrepreneur passionate about sports and
                     exploring, aiming to create jobs and help those in need.</p>
             </div>
             <div class="dp w-1/2 flex flex-col items-center justify-center">
                 <!-- Image -->
-                <img src="https://i.ibb.co/qgmVq2v/434977709-1122608932381010-3456547892574939696-n.jpg"
+                <img src="https://i.ibb.co/7XkRtn2/441286824-1140539053921331-7908306955791579154-n.jpg"
                     alt="Sakib image" class="rounded-full h-48 w-48 object-cover object-center mb-4">
 
                 <!-- Social Media Icons -->
@@ -193,6 +193,7 @@
             </div>
         </div>
     </section>
+
     <!-- Skill Section -->
     <section id="skills" class="py-20 px-4 bg-gradient-to-b from-blue-400 via-purple-500 to-pink-500">
         <div class="container mx-auto">
