--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
             </div>
         </div>
     </section>
-
     <!-- Skill Section -->
     <section id="skills" class="py-20 px-4 bg-gradient-to-b from-blue-400 via-purple-500 to-pink-500">
         <div class="container mx-auto">
@@ -226,6 +225,37 @@
                     <span class="spans text-gray-800 font-semibold">Driving</span>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Services Section -->
+    <section id="services" class="py-20 px-4 bg-gray-100">
+        <div class="container mx-auto">
+            <!-- Title -->
+            <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Services</h2>
+
+            <!-- Service Cards -->
+            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- Service - Dealership -->
+                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
+                    <i class="fas fa-store-alt text-3xl text-green-500 mr-4 mt-1"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Dealership</h3>
+                        <p class="text-gray-600">Providing products from Bangladesh Dairy & Ice Cream, Smile Drinking
+                            Water, and Wow Ice Cream.</p>
+                    </div>
+                </li>
+
+                <!-- Service - Social Work -->
+                <li class="bg-white p-6 rounded-lg shadow-md relative flex">
+                    <i class="fas fa-hands-helping text-3xl text-yellow-500 mr-4 mt-1"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Social Work</h3>
+                        <p class="text-gray-600">Engaged in charity activities and organizing blood donation drives.</p>
+                    </div>
+                </li>
+
+                <!-- Add more services here -->
+            </ul>
         </div>
     </section>
 
